--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -67,6 +67,9 @@ jobs:
       - name: Unzip artifact
         run: unzip -O UTF-8 -qq '${{ env.ARTIFACT }}' -d dir
 
+      - name: List directory contents
+        run: ls -la dir
+
       - name: Setup Pages
         uses: actions/configure-pages@v4
 
