Add directory listing step in docs build workflow
This commit adds a step to list the directory contents after unzipping the artifact in the GitHub Actions build-docs workflow. It helps to verify the contents of the directory before proceeding with the setup pages step.

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -10,7 +10,7 @@ permissions:
   pages: write
 
 env:
-  INSTANCE: 'Writerside/b'
+  INSTANCE: 'Writerside/lb'
   ARTIFACT: 'webHelpB2-all.zip'
   DOCKER_VERSION: '241.18775'
 
@@ -66,6 +66,9 @@ jobs:
 
       - name: Unzip artifact
         run: unzip -O UTF-8 -qq '${{ env.ARTIFACT }}' -d dir
+
+      - name: List directory contents
+        run: ls -la dir
 
       - name: Setup Pages
         uses: actions/configure-pages@v4
