Update artifact name in build-docs workflow
Changed the artifact name from 'webHelpB2-all.zip' to 'webHelpLB2-all.zip' in the GitHub Actions build-docs workflow. This update ensures the correct artifact is referenced and generated during the build process.

--- a/.github/workflows/build-docs.yml
+++ b/.github/workflows/build-docs.yml
@@ -11,7 +11,7 @@ permissions:
 
 env:
   INSTANCE: 'Writerside/lb'
-  ARTIFACT: 'webHelpB2-all.zip'
+  ARTIFACT: 'webHelpLB2-all.zip'
   DOCKER_VERSION: '241.18775'
 
 jobs:
